--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h3>Work:</h3>
         
         <p>
-        <a href="https://www.youtube.com/watch?v=aM8YOBvq-jc" target="_blank"><img src="./Assets/WiP.jfif" alt="Work in Progress" width="400px"></img></a>
+        <a href="https://teaom.github.io/Movie-Recommender/" target="_blank"><img src="./Assets/Movie Recommender.png" alt="Movie Recommender" width="400px"></img></a>
         
             <a href="https://www.youtube.com/watch?v=aM8YOBvq-jc" target="_blank"><img src="./Assets/WiP.jfif" alt="Work in Progress" width="230"></img></a>
                     <a href="https://www.youtube.com/watch?v=aM8YOBvq-jc" target="_blank"> <img src="./Assets/WiP.jfif"alt="Work in Progress" width="230px"></img></a>
