--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <p>
         <a href="https://teaom.github.io/Movie-Recommender/" target="_blank"><img src="./Assets/Movie Recommender.png" alt="Movie Recommender" width="400px"></img></a>
         
-            <a href="https://www.youtube.com/watch?v=aM8YOBvq-jc" target="_blank"><img src="./Assets/WiP.jfif" alt="Work in Progress" width="230"></img></a>
+            <a href="https://musinion.herokuapp.com/" target="_blank"><img src="./Assets/Musinion.png" alt="musinion" width="230"></img></a>
                     <a href="https://www.youtube.com/watch?v=aM8YOBvq-jc" target="_blank"> <img src="./Assets/WiP.jfif"alt="Work in Progress" width="230px"></img></a>
                     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"><img src="./Assets/WiP.jfif"alt="Work in Progress" width="230px"></img></a>
                       
